--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,78 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+/*=========== nav ============*/
+nav {
+  width: 100%;
+  background-color: rgb(44, 44, 43);
   color: white;
+  padding: 10px;
+  position: sticky;
+  height: 60px;
+}
+.navBtnCollection{
+  position: absolute;
+  right: 10px;
+  display: inline;
+  align-items: left;
+}
+.navBtn{
+  margin-left: 30px;
+}
+.navContainer{
+  margin: auto;
+  max-width: 1200px;
+  position: relative;
+  padding: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+/* ========= Main ==========*/
+.mainContainer{
+  width: 100%;
+  max-width: 1200px;
+  margin: auto !important;
+  padding: 0px;
+  border: 1px solid red;
+  display: table;
+}
+.mainImgContianer {
+  text-align: center;
+  margin: auto !important; 
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+img{
+  width: 60%;
+  min-width: 300px;
+}
+@media screen and (max-width: 600px) {
+  img{
+    width: 60%;
+    min-width: 200px;
   }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.mainContentContainer{
+  width: 100%;
+  height: 100%;
+  border: 1px solid black;
+  margin: auto;
+}
+/*==========MovieList===============*/
+.MovieListContainer{
+  width: 100%;
+  max-width: 1200px;
+  margin: auto !important;
+}
+
+.MovieListCardContainer{
+  margin: auto !important;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+
+}
+
+.MovieListCard{
+  margin: auto;
 }
