--- a/src/App.css
+++ b/src/App.css
@@ -43,31 +43,35 @@ nav {
 .mainContainer{
   width: 100%;
   max-width: 1200px;
-  margin: auto !important;
+  margin: 10px auto !important;
   padding: 0px;
-  border: 1px solid red;
-  display: table;
 }
 .mainImgContianer {
   text-align: center;
   margin: auto !important; 
+  border-radius: 20px;
 }
 
 img{
   width: 60%;
   min-width: 300px;
+  border-radius: 20px;
 }
 @media screen and (max-width: 600px) {
   img{
     width: 60%;
     min-width: 200px;
+    border-radius: 20px;
   }
 }
 .mainContentContainer{
   width: 100%;
   height: 100%;
-  border: 1px solid black;
-  margin: auto;
+  padding: 20px;
+  border-radius: 20px;
+  margin: 10px auto;
+  color: white;
+  background-color: #6B6B6B;
 }
 /*==========MovieList===============*/
 .MovieListContainer{
@@ -115,7 +119,10 @@ img{
 th {
   text-align: center;
 }
-
+.DropdownRelated{
+  max-height: 350px;
+  overflow: scroll;
+}
 .InputSearchHeading{
 }
 .InputSearchAddMovie{
