--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,12 @@ body {
   color: white !important;
   background-color: transparent !important;
 }
-
+/*
+.button a {
+  display: block;
+  width: 100%;
+}
+*/
 nav {
   width: 100%;
   background-color: #212121;
